# chat-cli

./: .gitignore  README.md  pyproject.toml
chat/: __main__.py  app.py  editor.py  history.py  scrollview.py  terminal.py
chat/plugins/: __init__.py  google.py
