[project]
name = "chat-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.20.0",
    "pyyaml>=6.0.2",
    "textual>=3.4.0",
]

[tool.pyright]
typeCheckingMode = "strict"
reportAny=false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
